--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lumanosimo&family=Playfair+Display:ital,wght@1,700&display=swap');
 .App {
   text-align: center;
 }
