Price of each item

--- a/src/index.css
+++ b/src/index.css
@@ -28,9 +28,11 @@
 /* `````````````````````````````````````````````````````````````````````````````````` */
 
 .home-items{
-    @apply flex mt-[5%]
+    @apply flex mt-[5%] 
 }
-
+.home-items-list{
+    @apply flex
+}
 /* `````````````````````````````````````````````````````````````````````````````````````````` */
 
 .Fastsearch{
