--- a/src/index.css
+++ b/src/index.css
@@ -12,38 +12,47 @@
     @apply flex justify-center content-center
 }
 .user-confirm{
-    @apply flex justify-between sm:mr-[15%]
+    @apply mx-0 flex justify-between sm:mr-[15%]
 }
 .navbar-list{
-    @apply sm:mr-[15%]
+    @apply sm:mr-[15%] flex justify-center content-center
 }
 .list{
-    @apply sm:mr-[8%] hover:bg-black hover:text-white sm:w-14 px-2 sm:rounded-sm 
+    @apply rounded-md px-1 sm:mr-[4%] sm:text-xl h-7 hover:bg-black hover:text-white sm:w-[22%] md:w-[32%] sm:px-2 sm:rounded-md flex justify-center content-center
 }
 
 .details{
-    @apply ml-[5%]  hover:bg-black hover:text-white sm:w-16 px-2 h-8 sm:rounded-sm
+    @apply px-1 rounded-md sm:ml-[4%] sm:text-xl  hover:bg-black hover:text-white sm:w-[34%] sm:px-2 h-8 sm:rounded-md flex justify-center content-center
 }
 
 /* `````````````````````````````````````````````````````````````````````````````````` */
 
 .home-items{
-    @apply flex mt-[5%] 
+    @apply flex mt-[5%] md:ml-[11%] md:w-[80%] rounded-xl bg-white shadow-lg
 }
 .home-items-list{
-    @apply flex
+    @apply grid grid-cols-4 gap-4
+}
+.item-image{
+    @apply md:my-[6%] mx-auto bg-sky-200 rounded-lg md:mx-[5%] w-[90%]
+}
+.item-name{
+    @apply text-red-500 font-serif md:text-xl lg:text-2xl flex content-center justify-center
+}
+.total-content-home{
+    /* @apply  */
 }
 /* `````````````````````````````````````````````````````````````````````````````````````````` */
 
 .Fastsearch{
-    @apply w-[100%] flex mt-[5%]
+    @apply ml-[9%] mb-[6%] w-[80%] flex content-center justify-center md:mt-[5%] md:ml-[10%] md:mb-[4%]
 }
 .Fastsearch div span{
-    @apply sm:text-sm md:text-xl ml-[9%]
+    @apply sm:text-sm md:text-xl flex content-center justify-center
 }
 
 #fast-items-image{
-    @apply rounded-2xl w-[40%] h-[80%] 
+    @apply rounded-2xl ml-[22%] w-[50%] h-[80%] md:ml-[25%]
 }
 .requested-data{
     @apply mt-[5%]
@@ -56,4 +65,22 @@
 }
 .requested-data-lists{
     @apply flex w-[8%]  
+}
+.input{
+    @apply mb-[4%] flex content-center justify-center md:ml-[25%] md:w-[40%]
+}
+.search-items{
+    @apply flex bg-gray-600 rounded-md my-auto
+}
+.search{
+    @apply md:mr-[4%] md:h-10 md:w-64 w-full rounded-md 
+}
+.search::placeholder{
+    @apply ml-[5%]
+}
+label{
+    @apply mr-[2%] md:mr-[2%] my-auto
+}
+.search-items button{
+    @apply md:mr-[2%]
 }
